2nd ready updated

--- a/ready.html
+++ b/ready.html
@@ -6,7 +6,7 @@
 <body>
 
 <h1>I am ready......</h1>
-<p>This is a paragraph.</p>
+<p>This is new updated. so check it and marge it. :)</p>
 
 </body>
 </html>
